# AutoFilterBot

./: .env  .env.example  .gitignore  Dockerfile  README.md  Script.py  app.json  bot.py  docker-compose.yml  info.py  koyeb.yaml  pyproject.toml  render.yaml  requirements.txt  utils.py
database/: __init__.py  connections_mdb.py  filters_mdb.py  gfilters_mdb.py  ia_filterdb.py  users_chats_db.py
plugins/: group_filter.py  pm_filter.py  stats.py
utils/: __init__.py  health.py
