[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autofilterbot"
version = "4.5.0"
description = "A powerful Telegram auto-filter bot for indexing and searching media files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Devil TG", email = "contact@example.com"}
]
keywords = [
    "telegram",
    "bot",
    "autofilter",
    "media",
    "pyrogram",
    "mongodb"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
]

dependencies = [
    "pyrofork>=2.3.0",
    "tgcrypto>=1.2.5",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "pymongo>=4.6.0",
    "dnspython>=2.4.0",
    "marshmallow>=3.20.0",
    "umongo>=3.2.0",
    "motor>=3.3.0",
    "youtube-search>=2.1.2",
    "yt-dlp>=2024.1.1",
    "cinemagoer>=2023.5.1",
    "beautifulsoup4>=4.12.0",
    "opencv-python-headless>=4.8.0.0",
    "Pillow>=10.2.0",
    "deep-translator>=1.11.0",
    "telegraph>=2.2.0",
    "gTTS>=2.5.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "numpy>=1.26.0",
    "ujson>=5.9.0",
    "wget>=3.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/DevilServers/AutoFilterbot"
"Bug Tracker" = "https://github.com/DevilServers/AutoFilterbot/issues"
"Documentation" = "https://github.com/DevilServers/AutoFilterbot#readme"
"Source" = "https://github.com/DevilServers/AutoFilterbot"

[project.scripts]
autofilterbot = "bot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plugins*", "database*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = [".gitignore", ".dockerignore"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
